--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">JULIO
-            <span class="text-primary">CHAVEZ</span>
+          <h1 class="mb-0">JULIO CESAR
+            <span class="text-primary">CHAVEZ YUPANQUI</span>
           </h1>
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">name@email.com</a>
