--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5"> Av.Nicolas Ayllon 2507 Mz A Lt 11 - Ate· (01) 993162819 ·
             <a href="mailto:name@email.com">mhiauhriel2726@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">Dinámico y habituado al trabajo bajo presión y en equipo; con experiencia en atención al cliente y gran sentido de responsabilidad así como alta vocación se servicio, capaz de generar valor agregado a la organización mediante creación de ideas e iniciativa propia para la resolución de problemas..</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
