--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">EXPERIENCIA LABORAL</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -120,7 +117,7 @@
               <p>Av.Jorge Chavez 1019 - Lima</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Abril 1993 - Dicciembre 1998</span>
+              <span class="text-primary">Abril 1993 - Diciembre 1998</span>
             </div>
           </div>
 
@@ -164,45 +161,58 @@
       
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">CERTIFICACIONES</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Cisco Certified Network Associate (CCNA)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              	Cisco Certified Network Professional (CCNP)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+             Certificado en Office Avanzado</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              1<sup>st</sup>
+              Certificado en Soporte Tecnico</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Certificacion en Linux y Windows</li>          
           </ul>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">EXPERIENCIA LABORALES</h2>
+            <div class="subheading mb-3">Aleaciones a Base de Cobre</div>
+              <p>Av. Faraday 1910- ate</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Enero 2010 - Agosto 2013</span>
+            </div>
         </div>
+    <div class="subheading mb-3">Corporacccion de Industrias Plasticas S.A.C.</div>
+              <p>Av.Los Frutales 2000 - Ate</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Setiembre 2013 - Diciembre 2014</span>
+            </div>
+          <div class="subheading mb-3">JFTEL</div>
+              <p>Av.Los Sauce 1040 - Ate</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Enero 2014 - Junio 2017</span>
+            </div>
+        <div class="subheading mb-3">Compudiskett S.R.L.</div>
+              <p>Av.Republica de Chile 504 - Jesus Maria</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Julio 2017 - Actualmente</span>
+            </div>
       </section>
 
     </div>
