--- a/index.html
+++ b/index.html
@@ -188,29 +188,41 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">EXPERIENCIA LABORALES</h2>
-         <div class="subheading mb-3">Aleaciones a Base de Cobre</div>
-         <p>Av. Faraday 1910- ate</p>
-         </div>
-         <div class="resume-date text-md-right">
-        <span class="text-primary">Enero 2010 - Agosto 2013</span>
-        </div>
-       <div class="subheading mb-3">Corporacccion de Industrias Plasticas S.A.C.</div>
-       <p>Av.Los Frutales 2000 - Ate</p>
-       </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Aleaciones a Base de Cobre</h3>
+              <div class="subheading mb-3">Av. Faraday 1910- ate </div>
+              <p>Operario de Produccion</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Enero 2010 - Agosto 2013</span>
+            </div>
+          </div>
+   <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Corporacccion de Industrias Plasticas S.A.C.</h3>
+              <div class="subheading mb-3">Av.Los Frutales 2000 - Ate </div>
+              <p>Operario de Produccion</p>
+            </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Setiembre 2013 - Diciembre 2014</span>
             </div>
-          <div class="subheading mb-3">JFTEL</div>
-              <p>Av.Los Sauce 1040 - Ate</p>
+          </div>
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">JFTEL S.A.C.</h3>
+              <div class="subheading mb-3">Av.Los Sauce 1040 - Ate</div>
+              <p>Tecnico de Redes</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Enero 2014 - Junio 2017</span>
             </div>
-        <div class="subheading mb-3">Compudiskett S.R.L.</div>
-              <p>Av.Republica de Chile 504 - Jesus Maria</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Julio 2017 - Actualmente</span>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Compudiskett S.R.L.</h3>
+              <div class="subheading mb-3">Av.Republica de Chile 504 - Jesus Maria</div>
+              <p>Asistente de RR.HH</p>
             </div>
       </section>
 
