--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
               <div class="subheading mb-3">Av.Republica de Chile 504 - Jesus Maria</div>
               <p>Asistente de RR.HH</p>
             </div>
+             </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Julio 2017 - Actualmente</span>
+            </div>
       </section>
 
     </div>
